[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Level_1_Scripts/win_scene.gd" type="Script" id=1]
[ext_resource path="res://Audio/Level_1_Sounds/SoundForFinalGame/Music/CongratsMusicGame.wav" type="AudioStream" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/NotoSansDisplay-VariableFont_wdth,wght.ttf"

[sub_resource type="DynamicFont" id=4]
size = 26
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/NotoSansDisplay-VariableFont_wdth,wght.ttf"

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = SubResource( 3 )

[node name="win_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -964, -337 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -71.0
margin_top = 300.0
margin_right = 71.0
alignment = 1

[node name="main_menu_button" type="Button" parent="VBoxContainer"]
margin_top = 323.0
margin_right = 142.0
margin_bottom = 365.0
custom_fonts/font = SubResource( 4 )
text = "Main Menu"

[node name="credits_button" type="Button" parent="VBoxContainer"]
margin_top = 369.0
margin_right = 142.0
margin_bottom = 411.0
custom_fonts/font = SubResource( 4 )
text = "Credits"

[node name="quit_button" type="Button" parent="VBoxContainer"]
margin_top = 415.0
margin_right = 142.0
margin_bottom = 457.0
custom_fonts/font = SubResource( 4 )
text = "Quit"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -200.0
alignment = 1

[node name="title_label" type="Label" parent="HBoxContainer"]
margin_left = 713.0
margin_right = 1207.0
margin_bottom = 213.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 5 )
text = "Congratulations
and
Thank You For Playing"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[connection signal="pressed" from="VBoxContainer/main_menu_button" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/credits_button" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/quit_button" to="." method="_on_quit_button_pressed"]
